Fixed routing and frontend interaction
