# internal/controller/handlers.go
@@ -4,14 +4,16 @@ import (
 	"crypto/md5"
 	"encoding/json"
 	"fmt"
-	"github.com/BenFaruna/url-shortener/internal/database"
 	"io"
+	"log"
 	"math/rand"
 	"net/http"
 	"strconv"
 	"strings"
 	"time"
 	"unicode"
+
+	"github.com/BenFaruna/url-shortener/internal/database"
 
 	"github.com/BenFaruna/url-shortener/internal/session"
 	_ "github.com/BenFaruna/url-shortener/internal/session/providers/memory"
@@ -52,8 +54,8 @@ func HomeHandler() http.HandlerFunc {
 				URLs []database.URLInfo
 				User UserInfo
 			}{}
-			data.URLs = database.ShortUrls{}.GetAll()
 			data.User = getUserSignedIn(w, r)
+			data.URLs = database.ShortUrls{}.GetAll(data.User.ID)
 			renderer.Render(w, "index.gohtml", data)
 			return
 		default:
@@ -69,51 +71,111 @@ func HomeHandler() http.HandlerFunc {
 	}
 }
 
-// ShortenHandler godoc
+func AddressHandler() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		switch r.Method {
+		case http.MethodGet:
+			GetAddressHandler(w, r)
+			return
+
+		case http.MethodPost:
+			ShortenAddressHandler(w, r, GenerateShortString)
+			return
+
+		case http.MethodDelete:
+			DeleteAddressHandler(w, r)
+			return
+
+		default:
+			errorHandler(w, r, http.StatusMethodNotAllowed, "method not allowed")
+			return
+		}
+	}
+}
+
+// ShortenAddressHandler godoc
 //
 //	@Summary		Shortens a url
 //	@Description	returns the short code of url shortened
 //	@Tags			url
 //	@Accept			json
 //	@Produce		json
-//	@Param			url	body		string	true	"url to shorten"
+//	@Param			url	body		database.Body	true	"url to shorten"
 //	@Success		201	{object}	database.StatusMessage
 //
 //	@Failure		403	{object}	database.StatusMessage
 //
-//	@Router			/shorten [post]
-func ShortenHandler(shortStringFunc func() string) http.Handler {
-	return Post(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		if r.URL.Path != "/shorten" {
-			errorHandler(w, r, http.StatusNotFound, fmt.Sprintf("route %q does not exists", r.URL.Path))
-			return
-		}
-		var data database.Body
-		json.NewDecoder(r.Body).Decode(&data)
+//	@Router			/address/shorten [post]
+func ShortenAddressHandler(w http.ResponseWriter, r *http.Request, shortStringFunc func() string) {
+	if r.URL.Path != "/address/shorten" {
+		errorHandler(w, r, http.StatusNotFound, fmt.Sprintf("route %q does not exists", r.URL.Path))
+		return
+	}
+	user := getUserSignedIn(w, r)
+	var data database.Body
+	json.NewDecoder(r.Body).Decode(&data)
 
-		shortenedURL := shortStringFunc()
+	shortenedURL := shortStringFunc()
 
-		shortenedURL, err := database.ShortUrls{}.Add(data.URL, shortenedURL)
+	shortenedURL, err := database.ShortUrls{}.Add(user.ID, data.URL, shortenedURL)
 
-		w.Header().Set("Content-Type", "application/json")
-		if err != nil {
-			w.WriteHeader(http.StatusForbidden)
-			json.NewEncoder(w).Encode(&database.StatusMessage{
-				Message: "Error",
-				Data:    err.Error(),
-			})
-			return
-		}
-
-		w.WriteHeader(201)
+	w.Header().Set("Content-Type", "application/json")
+	if err != nil {
+		w.WriteHeader(http.StatusForbidden)
 		json.NewEncoder(w).Encode(&database.StatusMessage{
-			Message: "url shortened",
-			Data:    r.URL.Hostname() + shortenedURL,
+			Message: "Error",
+			Data:    err.Error(),
 		})
-	}))
+		return
+	}
+
+	w.WriteHeader(201)
+	json.NewEncoder(w).Encode(&database.StatusMessage{
+		Message: "url shortened",
+		Data:    r.URL.Hostname() + shortenedURL,
+	})
 }
 
-// GetFullAddressHandler godoc
+// DeleteAddressHandler godoc
+//
+//	@Summary		delete address and short code from database
+//	@Description	deletes short urls using the url id
+//	@Tags			url
+//	@Accept			json
+//	@Produce		json
+//	@Param			url-id	path		string	true	"url id in database"
+//	@Success		200		{object}	database.StatusMessage
+//
+//	@Failure		404		{object}	database.StatusMessage
+//	@Failure		403		{object}	database.StatusMessage
+//
+//	@Router			/address/{url-id} [delete]
+func DeleteAddressHandler(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	shortAddress := strings.TrimPrefix(r.URL.Path, "/address/")
+
+	user := getUserSignedIn(w, r)
+
+	isUserUrl := database.ShortUrls{}.IsUserURL(user.ID, shortAddress)
+	if !isUserUrl {
+		errorHandler(w, r, http.StatusUnauthorized, "cannot delete url")
+		return
+	}
+
+	err := database.ShortUrls{}.Delete(user.ID, shortAddress)
+	if err != nil {
+		log.Print(err)
+		errorHandler(w, r, http.StatusNotFound, fmt.Sprintf("%q not found", shortAddress))
+		return
+	}
+	res := database.StatusMessage{Message: "success"}
+	if err := json.NewEncoder(w).Encode(&res); err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		errorHandler(w, r, http.StatusInternalServerError, "error encoding response")
+	}
+}
+
+// GetAddressHandler godoc
 //
 //	@Summary		Full address of short code
 //	@Description	returns the full url of the short code
@@ -126,26 +188,24 @@ func ShortenHandler(shortStringFunc func() string) http.Handler {
 //	@Failure		404	{object}	database.StatusMessage
 //
 //	@Router			/address/{url} [get]
-func GetFullAddressHandler() http.Handler {
-	return Get(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		shortAddress := strings.TrimPrefix(r.URL.Path, "/address/")
+func GetAddressHandler(w http.ResponseWriter, r *http.Request) {
+	shortAddress := strings.TrimPrefix(r.URL.Path, "/address/")
 
-		w.Header().Set("Content-Type", "application/json")
-		url, ok := database.ShortUrls{}.Get(shortAddress)
-		if !ok {
-			w.WriteHeader(http.StatusNotFound)
-			json.NewEncoder(w).Encode(database.StatusMessage{
-				Data:    "address does not exist",
-				Message: "Error",
-			})
-			return
-		}
-
+	w.Header().Set("Content-Type", "application/json")
+	url, ok := database.ShortUrls{}.Get(shortAddress)
+	if !ok {
+		w.WriteHeader(http.StatusNotFound)
 		json.NewEncoder(w).Encode(database.StatusMessage{
-			Data:    url,
-			Message: "address found",
+			Data:    "address does not exist",
+			Message: "Error",
 		})
-	}))
+		return
+	}
+
+	json.NewEncoder(w).Encode(database.StatusMessage{
+		Data:    url,
+		Message: "address found",
+	})
 }
 
 func LoginHandler() http.Handler {
@@ -187,7 +247,7 @@ func SignupHandler() http.Handler {
 }
 
 func ProfileHandler() http.Handler {
-	return Get(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+	return Get(AuthMiddleware(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		renderer, err := NewRenderer()
 		if err != nil {
 			errorHandler(w, r, http.StatusInternalServerError, "")
@@ -209,7 +269,7 @@ func ProfileHandler() http.Handler {
 			errorHandler(w, r, http.StatusInternalServerError, "")
 			return
 		}
-	}))
+	})))
 }
 
 func errorHandler(w http.ResponseWriter, _ *http.Request, status int, errorMessage string) {
